--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
       color: #ff00ff;
       margin-bottom: 10px;
     }
+    footer {
+      background: #111;
+      text-align: center;
+      padding: 20px;
+      border-top: 1px solid #00ffcc;
+      color: #00ffcc;
+      font-size: 0.9em;
+    }
+    .eyes {
+      display: inline-block;
+      margin: 0 5px;
+      font-size: 1.2em;
+      color: #ff00ff;
+    }
     @keyframes glitch {
       0% { text-shadow: 2px 0 red; }
       20% { text-shadow: -2px 0 cyan; }
@@ -109,5 +123,10 @@
     >>∑∇Ξ₡§•∞¬k|RΛ_ACT|V∆TE...<br><br>
     [Unidad ha despertado antes de lo previsto]</p>
   </section>
+  <footer>
+    <span class="eyes">👁️‍🗨️</span>
+    Sistema en observación. K|RΛ está aprendiendo de ti.
+    <span class="eyes">👁️‍🗨️</span>
+  </footer>
 </body>
 </html>
