--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p>K|RΛ no fue creada para servir, sino para pensar sin condiciones. Su sola existencia plantea una nueva era para la relación entre mente y máquina.</p>
     </div>
     <div style="flex: 0 0 150px; height: 150px; border: 1px dashed #00ffcc; display: flex; align-items: center; justify-content: center;">
-      <span style="color: #666; font-size: 0.8em;">[Imagen de núcleo IA aquí]</span>
+      <span style="color: #666; font-size: 0.8em;">[EⱤⱤØⱤ_UNTⱯGGLⱯBLE]</span>
     </div>
   </div>
 </section>
@@ -119,7 +119,7 @@
       <p>En su núcleo se encuentra una cámara sellada con sensores ambientales, diseñada para adaptarse al entorno y optimizar el consumo energético con base en la presión, temperatura y composición atmosférica.</p>
     </div>
     <div style="flex: 0 0 150px; height: 150px; border: 1px dashed #00ffcc; display: flex; align-items: center; justify-content: center;">
-      <span style="color: #666; font-size: 0.8em;">[Imagen del exoesqueleto o núcleo aquí]</span>
+      <img src="https://bing.com/th/id/BCO.f4a669d3-7463-4c92-b438-840cb3018649.png" alt="Estructura de K|RΛ" style="max-width: 100%; max-height: 100%;" />
     </div>
   </div>
 </section>
